Final aula 2 NLW

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "Proffy",
+        "esnext",
         "proffys",
-        "secundary"
+        "secundary",
+        "whatsapp"
     ]
 }
